--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,106 @@
 ---
 ---
 
+/* Add Sass variables here */
+
 @import "jekyll-theme-slate";
+
+/* Add style here */
+/*
+ * Sidebar
+ *
+ * Flexible banner for housing site name, intro, and "footer" content. Starts
+ * out above content in mobile and later moves to the side with wider viewports.
+ */
+
+ .sidebar {
+    text-align: center;
+    padding: 2rem 1rem;
+    color: rgba(255,255,255,.5);
+    background-color: #303059; /* this edits background color of sidebar */
+  }
+  @media (min-width: 48rem) {
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      width: 18rem;
+      text-align: left;
+      font-size: 20px; /* this changes back the sidebar font size, overriding the above edit */
+    }
+  }
+  
+  /* Sidebar links */
+  .sidebar a {
+    color: #fff;
+    /*font-family: "Helvetica Neue", sans-serif; /* I edited this, don't think this line here affects anything */ */
+  }
+  
+  /* About section */
+  .sidebar-about h1 {
+    text-align: center; /* remove this line to left-align text */
+    color: #fff;
+    margin-top: 0;
+    /*font-family: "Abril Fatface", serif;*/
+    font-family: "Garamond", serif; /* THIS ONE CHANGES THE MAIN TITLE FONT */
+    font-size: 3.25rem; /* size of main title font */
+  }
+  
+  /* Sidebar nav */
+  .sidebar-nav {
+    padding-left: 0;
+    list-style: none;
+  }
+  .sidebar-nav-item {
+    display: block;
+  }
+  a.sidebar-nav-item:hover,
+  a.sidebar-nav-item:focus {
+    text-decoration: underline;
+  }
+  .sidebar-nav-item.active {
+    font-weight: bold;
+  }
+  
+  /* Sticky sidebar
+   *
+   * Add the `sidebar-sticky` class to the sidebar's container to affix it the
+   * contents to the bottom of the sidebar in tablets and up.
+   */
+  
+  @media (min-width: 48rem) {
+    .sidebar-sticky {
+      position: absolute;
+      right:  1rem;
+      bottom: 1rem;
+      left:   1rem;
+    }
+  }
+  
+  
+  /* Container
+   *
+   * Align the contents of the site above the proper threshold with some margin-fu
+   * with a 25%-wide `.sidebar`.
+   */
+  
+  .content {
+    padding-top:    4rem;
+    padding-bottom: 4rem;
+  }
+  
+  @media (min-width: 48rem) {
+    .content {
+      max-width: 38rem;
+      margin-left: 20rem;
+      margin-right: 2rem; /* orig. is 2 */
+    }
+  }
+  
+  @media (min-width: 64rem) {
+    .content {
+      margin-left: 22rem;
+      margin-right: 4rem; /* orig. is 4, this seems to be the right side margin? */
+    }
+  }
