--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,30 @@
 @import "jekyll-theme-slate";
 
 /* Add style here */
+
+/*
+ * Global resets -------------THESE ARE GLOBAL PARAMS
+ *
+ * Update the foundational and global aspects of the page.
+ */
+
+ html {
+    font-family: "Helvetica Neue", sans-serif;
+    /* Menlo, Monaco, "Courier New", monospace; */
+    /* "Helvetica Neue", sans-serif; */
+    /* "PT Sans", Helvetica, Arial, sans-serif */
+  }
+  @media (min-width: 48rem) {
+    html {
+      font-size: 14px;
+    }
+  }
+  @media (min-width: 58rem) { 
+    html {
+      font-size: 18px;
+    }
+  }
+
 /*
  * Sidebar
  *
@@ -86,8 +110,8 @@
    */
   
   .content {
-    padding-top:    4rem;
-    padding-bottom: 4rem;
+/*     padding-top:    4rem;
+    padding-bottom: 4rem; */
   }
   
   @media (min-width: 48rem) {
