--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -110,15 +110,15 @@
    */
   
   .content {
-/*     padding-top:    4rem;
-    padding-bottom: 4rem; */
+    padding-top:    2rem;
+    padding-bottom: 2rem;
   }
   
   @media (min-width: 48rem) {
     .content {
       max-width: 38rem;
-      margin-left: 20rem;
-      margin-right: 2rem;
+/*       margin-left: 20rem;
+      margin-right: 2rem; */
     }
   }
   
