--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,7 +41,7 @@
     text-align: center;
     padding: 2rem 1rem;
     color: rgba(255,255,255,.5);
-    background-color: #303059;
+    background-color: #ffffff;  //#303059
   }
   @media (min-width: 48rem) {
     .sidebar {
@@ -112,19 +112,21 @@
   .content {
     padding-top:    2rem;
     padding-bottom: 2rem;
+    padding-right:  2rem;
+    padding-left:   2rem;
   }
   
   @media (min-width: 48rem) {
     .content {
       max-width: 38rem;
-/*       margin-left: 20rem;
-      margin-right: 2rem; */
+      margin-left: 20rem;
+      margin-right: 2rem;
     }
   }
   
   @media (min-width: 64rem) {
     .content {
-      margin-left: 22rem;
-      margin-right: 4rem;
+      margin-left: 20rem;
+      margin-right: 2rem;
     }
   }
