--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,6 +30,10 @@
     }
   }
 
+  body {
+    background-color: #fff;
+  }
+
 /*
  * Sidebar
  *
@@ -41,7 +45,7 @@
     text-align: center;
     padding: 2rem 1rem;
     color: rgba(255,255,255,.5);
-    background-color: #ffffff;  //#303059
+    background-color: #303059;  
   }
   @media (min-width: 48rem) {
     .sidebar {
@@ -49,7 +53,7 @@
       top: 0;
       left: 0;
       bottom: 0;
-      width: 18rem;
+      width: 14rem;
       text-align: left;
       font-size: 20px;
     }
@@ -68,7 +72,7 @@
     margin-top: 0;
     /*font-family: "Abril Fatface", serif;*/
     font-family: "Garamond", serif;
-    font-size: 3.25rem; 
+    font-size: 2.5rem; 
   }
   
   /* Sidebar nav */
@@ -112,21 +116,25 @@
   .content {
     padding-top:    2rem;
     padding-bottom: 2rem;
-    padding-right:  2rem;
-    padding-left:   2rem;
+/*     padding-right:  2rem;
+    padding-left:   2rem; */
   }
   
   @media (min-width: 48rem) {
     .content {
       max-width: 38rem;
-      margin-left: 20rem;
+      margin-left: 16rem;
       margin-right: 2rem;
+      padding-right: 1rem;
+      padding-left: 1rem;
     }
   }
   
   @media (min-width: 64rem) {
     .content {
-      margin-left: 20rem;
+      margin-left: 16rem;
       margin-right: 2rem;
+      padding-right: 2rem;
+      padding-left: 2rem;
     }
   }
