--- a/css/style.scss
+++ b/css/style.scss
@@ -30,10 +30,6 @@
     }
   }
 
-  body {
-    background-color: #fff;
-  }
-
 /*
  * Sidebar
  *
@@ -116,8 +112,8 @@
   .content {
     padding-top:    2rem;
     padding-bottom: 2rem;
-/*     padding-right:  2rem;
-    padding-left:   2rem; */
+    padding-right:  0.5rem;
+    padding-left:   0.5rem;
   }
   
   @media (min-width: 48rem) {
