--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,44 +1,28 @@
 <div class="sidebar">
-  <div class="container">
-<!--  <div class="container sidebar-sticky">  ORIGINAL STICKY SIDEBAR-->
-    <div class="sidebar-about">
-      <h1>{{ site.title }}</h1>
-      <p class="lead">{{ site.description }}</p>
-    </div>
+    <div class="container">
+        <div class="sidebar-about">
+            <h1>{{ site.title }}</h1>
+            <!-- <p class="lead">{{ site.description }}</p> -->
+        </div>
 
-    <ul class="sidebar-nav">
-    
-        <a class="sidebar-nav-item" href="https://github.com/kjgilbert"> </a>
+        <ul class="sidebar-nav">
 
-      <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
-        <a href="/">Home</a>
-      </li>
-
-      {% comment %}
-        The code below dynamically generates a sidebar nav of pages with
-        `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
-
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "page" %}
-            <li class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}">
-              <a href="{{ node.url }}">{{ node.title }}</a>
+            <li class="sidebar-nav-item{% if page.title == "Bio" %} active{% endif %}">
+                <a href="/">Bio</a>
             </li>
-          {% endif %}
-        {% endif %}
-      {% endfor %}
+            <li class="sidebar-nav-item{% if page.title == "Research" %} active{% endif %}">
+                <a href="research">Research</a>
+            </li>
+            <li class="sidebar-nav-item{% if page.title == "Publications" %} active{% endif %}">
+                <a href="publications">Publications</a>
+            </li>
+            <li class="sidebar-nav-item{% if page.title == "Contact" %} active{% endif %}">
+                <a href="contact">Contact</a>
+            </li>
 
- <!--     <li class="sidebar-nav-item"><a href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a></li>   I COMMENTED THIS LINE OUT-->
- <!--     <li class="sidebar-nav-item"><a href="{{ url }}/pdfs/KGilbert_CV.pdf"> <i>Curriculum vitae</i> </a></li>  -->
- <!--     <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub</a></li>  -->
-    <a class="sidebar-nav-item" href="{{ url }}/pdfs/KGilbert_CV.pdf" target="_blank"> CV </a>
-    <a class="sidebar-nav-item" href="https://github.com/kjgilbert" target="_blank">GitHub</a>
- <!--     <li class="sidebar-nav-item">Currently v{{ site.version }}</li>   I COMMENTED THIS LINE OUT-->
-<!--    </ul>   I COMMENTED THIS LINE OUT-->
+        </ul>
 
- <!--   <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>    I COMMENTED THIS LINE OUT-->
- 
-  </div>
+        <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    
+    </div>
 </div>
