--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
-
+    <meta name="description" content="{{ site.description | default: 'Personal website of Zuzana Hofmanová, Postdoctoral Researcher at University of Fribourg, Department of Biology.' }}">
+    <title>{{ page.title }} &middot; {{ site.title }}</title>
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
 {% seo %}
@@ -14,25 +14,15 @@
 
   <body>
 
-    <!-- HEADER 
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
-
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-
-        </header>
-    </div>-->
-
-    <!-- SIDEBAR -->
+    <!-- Sidebar -->
     {% include sidebar.html %}
 
-    <!-- MAIN CONTENT -->
+    <!-- Main content -->
     <div class="content container">
         {{ content }}
     </div>
 
+    <!-- Google Analytics -->
     {% if site.google_analytics %}
       <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
