--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,9 @@
 <div class="sidebar">
     <div class="container">
         <div class="sidebar-about">
-            <h1>{{ site.title }}</h1>
-            <!-- <p class="lead">{{ site.description }}</p> -->
+            <img src="../images/bio.jpg" alt="Zuzana Hofmanová">
+            <!-- <h1>{{ site.title }}</h1>
+            <p class="lead">{{ site.description }}</p> -->
         </div>
 
         <ul class="sidebar-nav">
@@ -21,8 +22,6 @@
             </li>
 
         </ul>
-
-        <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
     
     </div>
 </div>
