--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -131,6 +131,11 @@ strong {
   font-weight: bold;
 }
 
+img {
+  position: relative;
+  margin: 10px 0 10px 0;
+}
+
 p img {
   display: inline;
   margin: 0;
