--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,10 @@
 <div class="sidebar">
     <div class="container">
-        <div class="sidebar-about">
+        <!-- <div class="sidebar-about"> -->
             <img src="../images/bio.jpg" alt="Zuzana Hofmanová">
             <!-- <h1>{{ site.title }}</h1>
             <p class="lead">{{ site.description }}</p> -->
-        </div>
+        <!-- </div> -->
 
         <ul class="sidebar-nav">
 
