--- a/css/style.scss
+++ b/css/style.scss
@@ -62,6 +62,13 @@
     height: 12.5rem;
     width: 10rem;
   }
+
+  @media (max-width: 12rem) {
+    .content {
+      height: 10rem;
+      width: 8rem;
+    }
+  }
   
   /* Sidebar links */
   .sidebar a {
@@ -69,15 +76,14 @@
     /*font-family: "Helvetica Neue", sans-serif; */
   }
   
-  /* About section */
+  /* About section
   .sidebar-about h1 {
     text-align: center;
     color: #fff;
     margin-top: 0;
-    /*font-family: "Abril Fatface", serif;*/
     font-family: "Garamond", serif;
     font-size: 2.5rem; 
-  }
+  }*/
   
   /* Sidebar nav */
   .sidebar-nav {
@@ -127,7 +133,7 @@
   @media (min-width: 48rem) {
     .content {
       max-width: 38rem;
-      margin-left: 14rem;
+      margin-left: 12rem;
       margin-right: 2rem;
       padding-top: 2rem;
       padding-bottom: 2rem;
@@ -138,7 +144,7 @@
   
   @media (min-width: 64rem) {
     .content {
-      margin-left: 14rem;
+      margin-left: 12rem;
       margin-right: 2rem;
       padding-top: 2rem;
       padding-bottom: 2rem;
