--- a/css/style.scss
+++ b/css/style.scss
@@ -63,7 +63,7 @@
     width: 5rem;
   }
 
-  @media (max-width: 12rem) {
+  @media (min-width: 12rem) {
     .content {
       height: 10rem;
       width: 8rem;
