--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,3 @@
----
----
-
 /* Add Sass variables here */
 
 @import "jekyll-theme-slate";
@@ -8,7 +5,7 @@
 /* Add style here */
 
 /*
- * Global resets -------------THESE ARE GLOBAL PARAMS
+ * Global resets
  *
  * Update the foundational and global aspects of the page.
  */
@@ -131,6 +128,7 @@
   }
   
   @media (min-width: 48rem) {
+    .content {
       margin-left: 14rem;
       margin-right: 2rem;
       padding-top: 2rem;
