--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <meta name="description" content="{{ site.description | default: 'Personal website of Zuzana Hofmanová, Postdoctoral Researcher at University of Fribourg, Department of Biology.' }}">
     <title>{{ page.title }} &middot; {{ site.title }}</title>
+    <link href='/images/favicon.ico' rel='shortcut icon' type='image/x-icon'>
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
 {% seo %}
