--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,13 @@
         {{ content }}
     </div>
 
+    <!-- Embedded twitter timeline -->
+    <!-- <div class="twitter"> -->
+        <a class="twitter-timeline" data-width="250" data-height="600" data-theme="light" 
+        href="https://twitter.com/dewawer?ref_src=twsrc%5Etfw">Tweets by dewawer</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <!-- </div> -->
+
     <!-- Google Analytics -->
     {% if site.google_analytics %}
       <script type="text/javascript">
