--- a/css/style.scss
+++ b/css/style.scss
@@ -101,21 +101,6 @@
     font-weight: bold;
   }
   
-  /* Sticky sidebar
-   *
-   * Add the `sidebar-sticky` class to the sidebar's container to affix it the
-   * contents to the bottom of the sidebar in tablets and up.
-   */
-  
-  @media (min-width: 48rem) {
-    .sidebar-sticky {
-      position: absolute;
-      right:  1rem;
-      bottom: 1rem;
-      left:   1rem;
-    }
-  }
-  
   
   /* Container
    *
@@ -145,6 +130,40 @@
     .content {
       max-width: 38rem;  
       margin-left: 14rem;
+      margin-right: 2rem;
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+      padding-right: 2rem;
+      padding-left: 2rem;
+    }
+  }
+
+  /* Embedded twitter timeline
+   *
+   */
+  
+  .twitter-timeline {
+    display: none;
+  }
+  
+  @media (min-width: 48rem) {
+    .twitter-timeline {
+      display: inline;
+      margin-left: 72rem;
+      margin-right: 2rem;
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+      padding-right: 1rem;
+      padding-left: 1rem;
+    }
+  }
+  
+  @media (min-width: 64rem) {
+    .twitter-timeline {
+      display: block;
+      width: 250;
+      height: 250;
+      margin-left: 72rem;
       margin-right: 2rem;
       padding-top: 2rem;
       padding-bottom: 2rem;
