Embedded twitter postition

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,11 @@
     </div>
 
     <!-- Embedded twitter timeline -->
-    <!-- <div class="twitter"> -->
+    <div class="twitter">
         <a class="twitter-timeline" data-width="250" data-height="600" data-theme="light" 
         href="https://twitter.com/dewawer?ref_src=twsrc%5Etfw">Tweets by dewawer</a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <!-- </div> -->
+    </div>
 
     <!-- Google Analytics -->
     {% if site.google_analytics %}
