--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
 
     <!-- Embedded twitter timeline -->
     <div class="twitter">
-        <a class="twitter-timeline" data-width="250" data-height="600" data-theme="light" 
-        href="https://twitter.com/dewawer?ref_src=twsrc%5Etfw">Tweets by dewawer</a>
+        <a class="twitter-timeline" data-width="250" data-theme="light" 
+        href="https://twitter.com/dewawer?ref_src=twsrc%5Etfw">Tweets by dewawer</a> 
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
