--- a/css/style.scss
+++ b/css/style.scss
@@ -109,31 +109,29 @@
    */
   
   .content {
-    padding-top:    1rem;
-    padding-bottom: 1rem;
-    padding-right:  1rem;
-    padding-left:   1rem;
+    padding: 0.5rem;
   }
   
   @media (min-width: 48rem) {
     .content {
       position: absolute;
+      top: 0px;
+      padding: 1rem;
       margin-left: 14rem;
-      padding-top: 2rem;
-      padding-bottom: 2rem;
-      padding-right: 1rem;
-      padding-left: 1rem;
+      margin-top: 1rem;
+      margin-right: 14rem;
+      margin-bottom: 1rem;
     }
   }
   
   @media (min-width: 64rem) {
     .content {
       max-width: 38rem;  
+      padding: 2rem;
       margin-left: 14rem;
-      padding-top: 2rem;
-      padding-bottom: 2rem;
-      padding-right: 2rem;
-      padding-left: 2rem;
+      margin-top: 0rem;
+      margin-right: 14rem;
+      margin-bottom: 0rem;
     }
   }
 
@@ -141,24 +139,10 @@
    *
    */
   
-  .twitter {
-    min-width: 6rem;
-  }
-  
   @media (min-width: 48rem) {
     .twitter {
-      position: sticky;
-      right: 0px;
       margin-left: 56rem;
-      margin-top: 2rem;
-      margin-bottom: 2rem;
-    }
-  }
-  
-  @media (min-width: 64rem) {
-    .twitter {
-      margin-left: 56rem;
-      margin-top: 2rem;
-      margin-bottom: 2rem;
+      margin-top: 3rem;
+      width: 14rem;
     }
   }
