Repair twitter timeline position

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,17 +18,24 @@
     <!-- Sidebar -->
     {% include sidebar.html %}
 
-    <!-- Main content -->
-    <div class="content container">
-        {{ content }}
+    <!-- Main content + embeddet twitter timeline -->
+    <div class="container">
+        <div class="content">
+            {{ content }}
+        </div>
+        <div class="twitter">
+            <a class="twitter-timeline" data-width="250" data-height="600" data-theme="light" 
+            href="https://twitter.com/dewawer?ref_src=twsrc%5Etfw">Tweets by dewawer</a> 
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
     </div>
 
-    <!-- Embedded twitter timeline -->
+    <!-- Embedded twitter timeline
     <div class="twitter">
-        <a class="twitter-timeline" data-width="250" data-theme="light" 
+        <a class="twitter-timeline" data-width="250" data-height="600" data-theme="light" 
         href="https://twitter.com/dewawer?ref_src=twsrc%5Etfw">Tweets by dewawer</a> 
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
+    </div> -->
 
     <!-- Google Analytics -->
     {% if site.google_analytics %}
