--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-    <div class="container">
+    <!-- <div class="container"> -->
         <!-- <div class="sidebar-about"> -->
             <img src="../images/bio.jpg" alt="Zuzana Hofmanová">
             <!-- <h1>{{ site.title }}</h1>
@@ -23,5 +23,5 @@
 
         </ul>
     
-    </div>
+    <!-- </div> -->
 </div>
