--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -46,7 +46,7 @@ Theme Styles
 body {
   box-sizing: border-box;
   color:#373737;
-  background: #ffffff;
+  background: #212121;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -133,7 +133,17 @@ strong {
 
 img {
   position: relative;
+  margin: 0 auto;
+  max-width: 739px;
+  padding: 5px;
   margin: 10px 0 10px 0;
+  border: 1px solid #ebebeb;
+
+  box-shadow: 0 0 5px #ebebeb;
+  -webkit-box-shadow: 0 0 5px #ebebeb;
+  -moz-box-shadow: 0 0 5px #ebebeb;
+  -o-box-shadow: 0 0 5px #ebebeb;
+  -ms-box-shadow: 0 0 5px #ebebeb;
 }
 
 p img {
@@ -183,7 +193,7 @@ blockquote {
 
 
 ul, ol, dl {
-  margin-bottom: 0px
+  margin-bottom: 15px
 }
 
 ul {
