--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-
+    <meta name="description" content="{{ site.description | default: 'Personal website of Zuzana Hofmanová, Postdoctoral Researcher at University of Fribourg, Department of Biology.' }}">
+    <title>{{ page.title }} &middot; {{ site.title }}</title>
+    <link href='/images/favicon.ico' rel='shortcut icon' type='image/x-icon'>
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 {% seo %}
   </head>
 
@@ -17,17 +17,26 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          
+            <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+            <h2 id="project_tagline">{{ page.title | default: site.github.project_tagline }}</h2>
 
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+            <ul class="header-nav">
 
-          {% if site.show_downloads %}
-            <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
-            </section>
-          {% endif %}
+                <li class="header-nav-item{% if page.title == "Bio" %} active{% endif %}">
+                    <a href="/">Bio</a>
+                </li>
+                <li class="header-nav-item{% if page.title == "Research" %} active{% endif %}">
+                    <a href="research">Research</a>
+                </li>
+                <li class="header-nav-item{% if page.title == "Publications" %} active{% endif %}">
+                    <a href="publications">Publications</a>
+                </li>
+                <li class="header-nav-item{% if page.title == "Contact" %} active{% endif %}">
+                    <a href="contact">Contact</a>
+                </li>
+            </ul>
+
         </header>
     </div>
 
@@ -36,16 +45,6 @@
       <section id="main_content" class="inner">
         {{ content }}
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
 
     {% if site.google_analytics %}
