--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+
+            <img src="../images/top1.JPG" width="660px" height="440px" class="header">
           
             <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-            <h2 id="project_tagline">{{ page.title | default: site.github.project_tagline }}</h2>
+            <!-- <h2 id="project_tagline">{{ page.title | default: site.github.project_tagline }}</h2> -->
 
             <ul class="header-nav">
 
@@ -42,9 +44,10 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        {{ content }}
-      </section>
+        <section id="main_content" class="inner">
+            <img src="../images/{{ page.title }}.JPG" width="660px" height="440px" class="content" alt="{{ page.title }}">
+            {{ content }}
+        </section>
     </div>
 
     {% if site.google_analytics %}
