--- a/css/style.scss
+++ b/css/style.scss
@@ -7,24 +7,84 @@
 
 /* Add style here */
 
+/*
+ * Body
+ *
+ * Page body.
+ */
+
+body {
+    background: #f2f2f2;
+}
+
+.inner {
+    padding: 30px 10px 20px 10px;
+    min-width: 0px;
+}
+
+@media screen and (max-width: 480px) {
+    .inner {
+        padding: 20px 10px 10px 10px
+    }
+}
 
 /*
  * Header
  *
  * Flexible banner for housing site and page name and site pages links.
  */
-  
-  /* Header links */
-  .header-nav {
+
+/* Header links */
+.header-nav {
+    padding: 0px;
     list-style: none;
-  }
-  .header-nav-item {
-    display: block;
-  }
-  a.header-nav-item:hover,
-  a.header-nav-item:focus {
+}
+
+.header-nav-item {
+    display: inline;
+    margin-right: 10px;
+}
+a.header-nav-item:hover,
+a.header-nav-item:focus {
     text-decoration: underline;
-  }
-  .header-nav-item.active {
+}
+.header-nav-item.active {
     font-weight: bold;
-  }
+}
+
+@media screen and (max-width: 320px) {
+    .header-nav-item {
+        display: block;
+        margin-right: 0px;
+    }
+}
+
+img.header {
+    postition: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+
+/*
+ * Content
+ *
+ * Page content.
+ */
+
+#main_content_wrap {
+    background: #f2f2f2;
+    border: 0px;
+}
+
+img.content {
+    postition: absolute;
+    top: 0px;
+    left: 0px;
+    -webkit-filter: opacity(50%);
+    filter: opacity(50%);
+}
+
+img.content:hover {
+    -webkit-filter: sepia(100%);
+    filter: sepia(100%);
+}
