--- a/css/style.scss
+++ b/css/style.scss
@@ -60,7 +60,7 @@ a.header-nav-item:focus {
 }
 
 img.header {
-    postition: absolute;
+    position: absolute;
     bottom: 0px;
     right: 0px;
 }
@@ -77,7 +77,7 @@ img.header {
 }
 
 img.content {
-    postition: absolute;
+    position: absolute;
     top: 0px;
     left: 0px;
     -webkit-filter: opacity(50%);
