--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
             <img src="../images/top1.JPG" width="660px" height="440px" class="header">
           
-            <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+            <h1 class="header-title">{{ site.title | default: site.github.repository_name }}</h1>
             <!-- <h2 id="project_tagline">{{ page.title | default: site.github.project_tagline }}</h2> -->
 
             <ul class="header-nav">
@@ -45,8 +45,8 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
         <section id="main_content" class="inner">
-            <img src="../images/{{ page.title }}.JPG" width="660px" height="440px" class="content" alt="{{ page.title }}">
             {{ content }}
+            <img src="../images/{{ page.title }}.JPG" class="content" alt="{{ page.title }}">
         </section>
     </div>
 
