--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,14 @@ body {
     background: #f2f2f2;
 }
 
+img.content {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    -webkit-filter: opacity(50%);
+    filter: opacity(50%);
+}
+
 .inner {
     padding: 30px 10px 20px 10px;
     min-width: 0px;
@@ -35,8 +43,15 @@ body {
  */
 
 /* Header links */
+.header-title {
+    padding: 0px;
+    list-style: none;
+    margin: 30px 0px 30px 0px;
+}
+
 .header-nav {
     padding: 0px;
+    margin: 30px 0px 30px 0px;
     list-style: none;
 }
 
@@ -61,8 +76,17 @@ a.header-nav-item:focus {
 
 img.header {
     position: absolute;
-    bottom: 0px;
+    bottom: -80px;
     right: 0px;
+    z-index: -1;
+    clip: rect(0px,660px,360px,0px);
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(50%);
+    -webkit-filter: opacity(50%);
+    filter: opacity(50%);
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 /*
@@ -77,11 +101,9 @@ img.header {
 }
 
 img.content {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    -webkit-filter: opacity(50%);
-    filter: opacity(50%);
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 img.content:hover {
