--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-            <img src="../images/top1.JPG" width="660px" height="440px" class="header">
+            <!-- <img src="../images/top1.JPG" width="660px" height="440px" class="header"> -->
           
             <h1 class="header-title">{{ site.title | default: site.github.repository_name }}</h1>
             <!-- <h2 id="project_tagline">{{ page.title | default: site.github.project_tagline }}</h2> -->
