Repair static image style

--- a/css/style.scss
+++ b/css/style.scss
@@ -104,7 +104,7 @@ img.content {
 }
 
 @media screen and (max-width: 660px) {
-    .img.content {
+    img.content {
         position: static;
     }
 }
