--- a/css/style.scss
+++ b/css/style.scss
@@ -95,6 +95,7 @@ img.content {
     position: absolute;
     top: 30px;
     right: 10px;
+    z-index: -1;
     border: 0px;
     margin: 0px;
     padding: 0px;
