Repair image names

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
     <div id="main_content_wrap" class="outer">
         <section id="main_content" class="inner">
             {{ content }}
-            <img src="../images/{{ page.title }}.JPG" class="content" alt="{{ page.title }}">
+            <img src="../images/{{ page.title }}.jpg" class="content" alt="{{ page.title }}">
         </section>
     </div>
 
