--- a/css/style.scss
+++ b/css/style.scss
@@ -120,4 +120,6 @@ img.content {
 img.bottom {
     position: absolute;
     width: 640px;
+    -webkit-filter: opacity(30%);
+    filter: opacity(30%);
 }
