Change image style

--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,10 @@
  * Page body.
  */
 
+html {
+    overflow-y: scroll;
+}
+
 body {
     background: #f2f2f2;
 }
@@ -72,6 +76,7 @@ a.header-nav-item:focus {
     }
 }
 
+/*
 img.header {
     position: absolute;
     bottom: -80px;
@@ -85,7 +90,7 @@ img.header {
     border: 0px;
     margin: 0px;
     padding: 0px;
-}
+}*/
 
 /*
  * Content
@@ -100,18 +105,18 @@ img.header {
 
 img.content {
     position: absolute;
-    top: 30px;
-    right: 10px;
+    top: 0px;
     z-index: -1;
     border: 0px;
     margin: 0px;
     padding: 0px;
-    width: 380px;
-    -webkit-filter: opacity(80%);
-    filter: opacity(80%);
+    width: 660px;
+    //-webkit-filter: opacity(80%);
+    //filter: opacity(80%);
+    -webkit-mask-image:-webkit-gradient(linear, right top, left top, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
 }
 
-@media screen and (max-width: 660px) {
+@media screen and (max-width: 320px) {
     img.content {
         position: static;
     }
@@ -119,7 +124,9 @@ img.content {
 
 img.bottom {
     position: absolute;
+    top: 60px;
     width: 640px;
     -webkit-filter: opacity(30%);
     filter: opacity(30%);
+    -webkit-mask-image: none;
 }
