--- a/css/style.scss
+++ b/css/style.scss
@@ -14,11 +14,15 @@
  */
 
 html {
-    overflow-y: scroll;
+    //overflow-y: scroll;
 }
 
 body {
     background: #f2f2f2;
+}
+
+.outer {
+    padding-left: calc(100vw - 100%);
 }
 
 .inner {
