Change image name to page name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
 
             <ul class="header-nav">
 
-                <li class="header-nav-item{% if page.title == "Bio" %} active{% endif %}">
-                    <a href="/">Bio</a>
+                <li class="header-nav-item{% if page.title == "About" %} active{% endif %}">
+                    <a href="/">About</a>
                 </li>
                 <li class="header-nav-item{% if page.title == "Research" %} active{% endif %}">
                     <a href="research">Research</a>
