--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="page {% if page.title == "Publications" %} publications{% endif %}">
+<div class="page {% if page.title == 'Publications' %} publications{% endif %}">
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </div>
