--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 
             <ul class="header-nav">
 
-                <li class="header-nav-item{% if page.title == "About" %} active{% endif %}">
+                <li class="header-nav-item{% if page.title == "Group Leader at Genetic History Group" %} active{% endif %}">
                     <a href="/">About</a>
                 </li>
                 <!-- <li class="header-nav-item{% if page.title == "Research" %} active{% endif %}">
